// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expertise component renders Expertise with data in props 1`] = `
<span
  class="date"
>
  2013-2023
</span>
`;

exports[`Expertise component renders Expertise with data in props 2`] = `
<span
  class="date"
>
  2023 feb - 2023 may
</span>
`;
